--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="/css/utility.css">
-        <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/utility.css">
     </head>
     <body>
         <div class="navi ma mw font1">
             <div class="left">
                 <div class="logo">
-                    <img src="img/logo.png">
+                    <img src="./img/logo.png">
                 </div>
                 <nav>
                     <ul>
@@ -31,7 +31,7 @@
                     </ul>
                 </nav>
                 <div class="lang">
-                    <a href="#"><img src="img/Vector7.png"></a>
+                    <a href="#"><img src="./img/Vector7.png"></a>
                 </div>
             </div>
             <div class="right">
@@ -45,7 +45,7 @@
                         A TACTICAL FPS SHOOTERS GAME
                     </h1>
                     <div class="logo2">
-                        <img src="/img/CSGO.png">
+                        <img src=".//img/CSGO.png">
                     </div>
                     <p class="para ma font3">
                         The game pits two teams, Terrorists and Counter-Terrorists, against each other in different objective-based game modes. The most common game modes involve the Terrorists planting a bomb while Counter-Terrorists attempt to stop them, or Counter-Terrorists attempting to rescue hostages that the Terrorists have captured.
@@ -61,19 +61,19 @@
                     <div class="imgs font1">
                         <span class="n1">
                             <a href="#">
-                                <img src="/img/n1.png" alt="">
+                                <img src=".//img/n1.png" alt="">
                                 <h2>GOODBYE WHEEL</h2>
                             </a>
                         </span class="n2">
                         <span>
                             <a href="#">
-                                <img src="/img/n3.png" alt="">
+                                <img src=".//img/n3.png" alt="">
                                 <h2>TEAM VITALITY</h2>
                             </a>
                         </span>
                         <span class="n3">
                             <a href="#">
-                                <img src="/img/n2.png" alt="">
+                                <img src=".//img/n2.png" alt="">
                                 <h2>NEW SKINS</h2>
                             </a>
                         </span>
@@ -91,7 +91,7 @@
                         <p>
                             The Counter-terrorists are the opposing force to Terrorists. The individuals known as legally armed forces, official militaries, police, securities, special services, agents that is approved by the government for worldwide security.
                         </p>
-                        <img src="img/ct2.png">
+                        <img src="./img/ct2.png">
                     </div>
                     <div class="ter">
                         <h2>
@@ -100,7 +100,7 @@
                         <p>
                             The terrorists are the the opposing force to the Counter-Terrorists. The individuals knows mostly as armed criminals, outlaws, anti-government forces, rebels, mercenaries or those did illegal activities formed to prove their rights to society.
                         </p>
-                        <img src="img/t 1.png">
+                        <img src="./img/t 1.png">
                     </div>
                     <div class="maps">
                         <h2>
@@ -125,7 +125,7 @@
         </div>
         <div class="footer ma mw">
             <div class="flogo">
-                <img src="/img/CSGO-Logo 3.png">
+                <img src=".//img/CSGO-Logo 3.png">
             </div>
             <div class="lclick">
                 <a href="#">PRIVACY NOTICE</a>
@@ -136,12 +136,12 @@
             <div class="rclick">
                 <h2>SOCIAL MEDIA</h2>
                 <div class="fimg">
-                    <a href="#"><img src="/img/Vector.png"></a>
-                    <a href="#"><img src="/img/Vector-1.png"></a>
-                    <a href="#"><img src="/img/Vector-2.png"></a>
-                    <a href="#"><img src="/img/Vector-3.png"></a>
-                    <a href="#"><img src="/img/Vector-4.png"></a>
-                    <a href="#"><img src="/img/Vector-5.png"></a>
+                    <a href="#"><img src=".//img/Vector.png"></a>
+                    <a href="#"><img src=".//img/Vector-1.png"></a>
+                    <a href="#"><img src=".//img/Vector-2.png"></a>
+                    <a href="#"><img src=".//img/Vector-3.png"></a>
+                    <a href="#"><img src=".//img/Vector-4.png"></a>
+                    <a href="#"><img src=".//img/Vector-5.png"></a>
                 </div>
             </div>
             <div class="bottom">
